--- a/index.html
+++ b/index.html
@@ -8,84 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <div class="row">
-            <div class="col-logo">
-                
-                <h1 class="logo">facebook</h1>
-                <h2>Facebook helps you connect and share with the people in your life.</h2>
-            </div>
-            <div class="col-form">
-                <div class="form-container">
-                   <input type="text" placeholder="Email address or phone number">
-                   <input type="password" placeholder="Password">
-                   <div class="btn-login">Login</div>
-                   <a href="#">Forgotten password</a>
-                   <div class="btn-new">Create new Account</div>
-                </div>
-                <p><a href="#"><b>Create a page</b></a> for a celebrity, brand or bussiness.</p>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <div class="footer-content">
-            <ol>
-                <li>English (UK)</li>
-                <li><a href="#">മലയാളം`</a></li>
-                <li><a href="#">தமிழ்</a></li>
-                <li><a href="#">తెలుగు</a></li>
-                <li><a href="#">বাংলা</a></li>
-                <li><a href="#">اردو</a></li>
-                <li><a href="#">हिन्दी</a></li>
-                <li><a href="#">ಕನ್ನಡ</a></li>
-                <li><a href="#">Español</a></li>
-                <li><a href="#">Português (Brasil)</a></li>
-                <li><a href="#">Français (France)</a></li>
-                <li><button class="plus">+</button></li>
-            </ol>
-            <ol>
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Log In </a></li>
-                <li><a href="#">Messenger</a></li>
-                <li><a href="#">Facebook Lite</a></li>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">People</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Page categories</a></li>
-                <li><a href="#">Places</a></li>
-                <li><a href="#">Games</a></li>
-                <li><a href="#">Locations</a></li>
-                <li><a href="#">Marketplace</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">PayGroups</a></li>
-                <li><a href="#">Jobs</a></li>
-                <li><a href="#">Oculus</a></li>
-                <li><a href="#">Portal</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Local</a></li>
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Log In </a></li>
-                <li><a href="#">Messenger</a></li>
-                <li><a href="#">Facebook Lite</a></li>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">People</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Page categories</a></li>
-                <li><a href="#">Places</a></li>
-                <li><a href="#">Games</a></li>
-                <li><a href="#">Locations</a></li>
-                <li><a href="#">Marketplace</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">PayGroups</a></li>
-                <li><a href="#">Jobs</a></li>
-                <li><a href="#">Oculus</a></li>
-                <li><a href="#">Portal</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Local</a></li>
-            </ol>
-            <small id="copy">Facebook &copy; 2021</small>
-        </div>
-    </footer>
-    
+    <div>
+        Number 1: <input id="num1" onchange="num1Onchange()"/> <span id="num1ErroMsg" class="redColour"></p> 
+    </div>
+    <br/>
+    <div>
+        Number 2: <input id="num2" onchange="num2Onchange()"/> <span id="num2ErroMsg" class="redColour"></p>
+    </div>
+    <br/>
+    <button onclick=addFunction()> ADD </button>
+    <br/>
+    <br/>
 </body>
 </html>
